--- a/practice/clippath/clippath.html
+++ b/practice/clippath/clippath.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Clip path</title>
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+      integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
   <body>
     <div class="box">
@@ -23,18 +30,46 @@
         <h2>Welcome to Sky</h2>
         <p>
           Lorem Ipsum is simply dummy text of the printing and typesetting
-          industry.<br>Lorem Ipsum has been the industry's standard dummy text ever
-          since the 1500s.when an unknown<br>printer took a galley of type and
-          scrambled it to make a type specimen book.
+          industry.<br />Lorem Ipsum has been the industry's standard dummy text
+          ever since the 1500s.when an unknown<br />printer took a galley of
+          type and scrambled it to make a type specimen book.
         </p>
       </div>
       <div id="button">
         <button id="btn-1">Get Started Now</button>
         <button id="btn-2">Learn More</button>
       </div>
-      <div id="footer">
-        
-      </div>
+      <img src="./Eo_circle_arrow-down.png" id="down_arrow">
+    </div>
+    <div id="footer">
+      <i class="fa-brands fa-wordpress"></i>
+      <i class="fa-regular fa-heart"></i>
+      <i class="fa-regular fa-lightbulb"></i>
+      <i class="fa-brands fa-twitch"></i>
+    </div>
+    <div id="footer-1">
+      <h1>Sleek Design</h1>
+      <h1>Clean Code</h1>
+      <h1>Creative Ideas</h1>
+      <h1>Free Support</h1>
+    </div>
+    <div id="footer-2">
+      <p>
+        Lorem Ipsum is simply dummy test of the<br>printing and typesetting
+        let.Lorem Ipsum<br>has been the industry.
+      </p>
+      <p>
+        Lorem Ipsum is simply dummy test of the<br>printing and typesetting
+        let.Lorem Ipsum<br>has been the industry.
+      </p>
+      <p>
+        Lorem Ipsum is simply dummy test of the<br>printing and typesetting
+        let.Lorem Ipsum<br>has been the industry.
+      </p>
+      <p>
+        Lorem Ipsum is simply dummy test of the<br>printing and typesetting
+        let.Lorem Ipsum<br>has been the industry.
+      </p>
     </div>
   </body>
 </html>
