--- a/practice/psd/practice-psd/mediaquery psd/practice-2/index.html
+++ b/practice/psd/practice-psd/mediaquery psd/practice-2/index.html
@@ -18,7 +18,7 @@
         <img src="./image/search.jpg" />
       </div>
     </div>
-    <div id="contanier">
+    <div id="container">
       <div id="section-1">
         <h1>Title Here</h1>
         <p>
