--- a/practice/psd/practice-psd/mediaquery psd/practice-1/index.html
+++ b/practice/psd/practice-psd/mediaquery psd/practice-1/index.html
@@ -100,7 +100,7 @@
           </form>
         </div>
       </div>
-      <!-- <div id="footer">
+      <div id="footer">
         <div class="footer-conatiner">
           <div>
             <h1>Mariachi</h1>
@@ -114,7 +114,7 @@
             <img src="./images/twitter.jpg">
             <img src="./images/whatsapp.jpg">         
           </div>
-          <div>
+          <div id="footer-list-1">
             <h2>About</h2>
             <dl>
               <dd>History</dd>
@@ -124,7 +124,7 @@
               <dd>Privacy Policy</dd>
             </dl>
           </div>
-          <div>
+          <div id="footer-list-2">
             <h2>Services</h2>
             <dl>
               <dd>How to Order</dd>
@@ -134,7 +134,7 @@
               <dd>Payment Method</dd>
             </dl>
           </div>
-          <div>
+          <div id="footer-list-3">
             <h2>Other</h2>
             <dl>
               <dd>Contact Us</dd>
@@ -142,7 +142,7 @@
             </dl>
           </div>
         </div>
-      </div> -->
+      </div>
     </div>
   </body>
 </html>
