--- a/practice/psd/practice-psd/mediaquery psd/practice-2/index.html
+++ b/practice/psd/practice-psd/mediaquery psd/practice-2/index.html
@@ -62,19 +62,19 @@
           </p>
         </div>
         <div id="section-3-2">
-          <div id="section-3-2-1">
+          <div class="section-3-2-1">
             <img src="./image/icon.jpg" />
             <h1>Basic</h1>
             <p>Lorem ipsum dolor sit amet,<br />consectetur adipiscing elit.</p>
             <button class="btn-1">$.150.00</button>
           </div>
-          <div id="section-3-2-1">
+          <div class="section-3-2-1">
             <img src="./image/icon.jpg" />
             <h1>Professional</h1>
             <p>Lorem ipsum dolor sit amet,<br />consectetur adipiscing elit.</p>
             <button class="btn-1">$.200.00</button>
           </div>
-          <div id="section-3-2-1">
+          <div class="section-3-2-1">
             <img src="./image/icon.jpg" />
             <h1>Ultimate</h1>
             <p>Lorem ipsum dolor sit amet,<br />consectetur adipiscing elit.</p>
