--- a/task/netflix/index.html
+++ b/task/netflix/index.html
@@ -10,7 +10,7 @@
     <div class="header-bg">
       <div class="nav">
         <div class="col-80">
-          <p>Netflix</p>
+          <img src="./Img/logo.png">
         </div>
         <div class="col-20">
           <select id="languages">
