--- a/task/netflix/index.html
+++ b/task/netflix/index.html
@@ -123,6 +123,21 @@
             </div>
           </div>
         </div>
+        <div id="section-5">
+          <div class="col-50">
+            <img src="./Img/img-1.png">
+          </div>
+          <div class="col-50">
+            <h1>Create profiles for
+              <br>kids</h1>
+            <p>Send children on adventures with their
+              <br>favourite characters in a space made just for
+              <br>them—free with your membership.</p>
+          </div>
+        </div>
+        <div id="section-6">
+          <h1>Frequently Asked Questions</h1>
+        </div>
       </div>
     </div>
   </body>
