--- a/task/netflix/index.html
+++ b/task/netflix/index.html
@@ -137,6 +137,27 @@
         </div>
         <div id="section-6">
           <h1>Frequently Asked Questions</h1>
+          <ul>
+            <li>
+              <button class="collapsible">
+                <h3>
+                  <span>What is Netflix?</span>
+                  <svg>+</svg>
+                </h3>
+              </button>
+              <div class="content">
+                <span>Netflix is a streaming service that offers a wide variety of award-winning TV shows,
+                  <br>movies, anime, documentaries and more – on thousands of internet-connected
+                  <br>devices.
+                  <br>
+                  <br>
+                  You can watch as much as you want, whenever you want, without a single ad – all for
+                  <br>one low monthly price. There's always something new to discover, and new TV shows\
+                  <br>and movies are added every week!
+                </span>
+              </div>
+            </li>
+          </ul>
         </div>
       </div>
     </div>
