--- a/task/netflix/index.html
+++ b/task/netflix/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Netflix</title>
     <link rel="stylesheet" href="styles.css" />
+    <script src="./js/jquery-3.7.1.min.js"></script>
   </head>
   <body>
     <div class="header-bg">
@@ -142,10 +143,63 @@
               <button class="collapsible">
                 <h3>
                   <span>What is Netflix?</span>
-                  <svg>+</svg>
                 </h3>
               </button>
-              <div class="content">
+              <div class="answer">
+                <span>Netflix is a streaming service that offers a wide variety of award-winning TV shows,
+                  <br>movies, anime, documentaries and more – on thousands of internet-connected
+                  <br>devices.
+                  <br>
+                  <br>
+                  You can watch as much as you want, whenever you want, without a single ad – all for
+                  <br>one low monthly price. There's always something new to discover, and new TV shows\
+                  <br>and movies are added every week!
+                </span>
+              </div>
+            </li>
+            <li>
+              <button class="collapsible">
+                <h3>
+                  <span>What is Netflix?</span>
+                </h3>
+              </button>
+              <div class="answer">
+                <span>Netflix is a streaming service that offers a wide variety of award-winning TV shows,
+                  <br>movies, anime, documentaries and more – on thousands of internet-connected
+                  <br>devices.
+                  <br>
+                  <br>
+                  You can watch as much as you want, whenever you want, without a single ad – all for
+                  <br>one low monthly price. There's always something new to discover, and new TV shows\
+                  <br>and movies are added every week!
+                </span>
+              </div>
+            </li>
+            <li>
+              <button class="collapsible">
+                <h3>
+                  <span>What is Netflix?</span>
+                </h3>
+              </button>
+              <div class="answer">
+                <span>Netflix is a streaming service that offers a wide variety of award-winning TV shows,
+                  <br>movies, anime, documentaries and more – on thousands of internet-connected
+                  <br>devices.
+                  <br>
+                  <br>
+                  You can watch as much as you want, whenever you want, without a single ad – all for
+                  <br>one low monthly price. There's always something new to discover, and new TV shows\
+                  <br>and movies are added every week!
+                </span>
+              </div>
+            </li>
+            <li>
+              <button class="collapsible">
+                <h3>
+                  <span>What is Netflix?</span>
+                </h3>
+              </button>
+              <div class="answer">
                 <span>Netflix is a streaming service that offers a wide variety of award-winning TV shows,
                   <br>movies, anime, documentaries and more – on thousands of internet-connected
                   <br>devices.
@@ -161,5 +215,6 @@
         </div>
       </div>
     </div>
+    <script src="./js/script.js"></script>
   </body>
 </html>
