--- a/task/netflix/index.html
+++ b/task/netflix/index.html
@@ -147,71 +147,108 @@
               </button>
               <div class="answer">
                 <span>Netflix is a streaming service that offers a wide variety of award-winning TV shows,
-                  <br>movies, anime, documentaries and more – on thousands of internet-connected
-                  <br>devices.
+                  movies, anime, documentaries and more – on thousands of internet-connected
+                  devices.
                   <br>
                   <br>
                   You can watch as much as you want, whenever you want, without a single ad – all for
-                  <br>one low monthly price. There's always something new to discover, and new TV shows\
-                  <br>and movies are added every week!
+                  one low monthly price. There's always something new to discover, and new TV shows
+                  and movies are added every week!
                 </span>
               </div>
             </li>
             <li>
               <button class="collapsible">
                 <h3>
-                  <span>What is Netflix?</span>
+                  <span>How  much does Netflix cost?</span>
                 </h3>
               </button>
               <div class="answer">
-                <span>Netflix is a streaming service that offers a wide variety of award-winning TV shows,
-                  <br>movies, anime, documentaries and more – on thousands of internet-connected
-                  <br>devices.
-                  <br>
-                  <br>
-                  You can watch as much as you want, whenever you want, without a single ad – all for
-                  <br>one low monthly price. There's always something new to discover, and new TV shows\
-                  <br>and movies are added every week!
+                <span>
+                  Watch Netflix on your smartphone, tablet, Smart TV, laptop, or streaming device, all for one fixed monthly fee. Plans range from ₹ 149 to ₹ 649 a month. No extra costs,
+                  no contracts.
                 </span>
               </div>
             </li>
             <li>
               <button class="collapsible">
                 <h3>
-                  <span>What is Netflix?</span>
+                  <span>Where can I watch?</span>
                 </h3>
               </button>
               <div class="answer">
-                <span>Netflix is a streaming service that offers a wide variety of award-winning TV shows,
-                  <br>movies, anime, documentaries and more – on thousands of internet-connected
-                  <br>devices.
-                  <br>
-                  <br>
-                  You can watch as much as you want, whenever you want, without a single ad – all for
-                  <br>one low monthly price. There's always something new to discover, and new TV shows\
-                  <br>and movies are added every week!
+                <span>Watch anywhere, anytime. Sign in with your Netflix account to watch instantly on the web at netflix.com from your personal computer or on any internet-connected device that offers the Netflix app, including smart TVs, smartphones, tablets, streaming media players and game consoles.
                 </span>
               </div>
             </li>
             <li>
               <button class="collapsible">
                 <h3>
-                  <span>What is Netflix?</span>
+                  <span>How do I cancel?</span>
                 </h3>
               </button>
               <div class="answer">
-                <span>Netflix is a streaming service that offers a wide variety of award-winning TV shows,
-                  <br>movies, anime, documentaries and more – on thousands of internet-connected
-                  <br>devices.
-                  <br>
-                  <br>
-                  You can watch as much as you want, whenever you want, without a single ad – all for
-                  <br>one low monthly price. There's always something new to discover, and new TV shows\
-                  <br>and movies are added every week!
-                </span>
+                <span>Netflix is flexible. There are no annoying contracts and no commitments. You can easily cancel your account online in two clicks. There are no cancellation fees – start or stop your account anytime.</span>
+              </div>
+            </li>
+            <li>
+              <button class="collapsible">
+                <h3>
+                  <span>What can I watch on Netfliex?</span>
+                </h3>
+              </button>
+              <div class="answer">
+                <span>Netflix has an extensive library of feature films, documentaries, TV shows, anime, award-winning Netflix originals, and more. Watch as much as you want, anytime you want.</span>
+              </div>
+            </li>
+            <li>
+              <button class="collapsible">
+                <h3>
+                  <span>What can I watch on Netflix good for kids?</span>
+                </h3>
+              </button>
+              <div class="answer">
+                <span>The Netflix Kids experience is included in your membership to give parents control while kids enjoy family-friendly TV shows and films in their own space.
+                  <br><br>
+                  Kids profiles come with PIN-protected parental controls that let you restrict the maturity rating of content kids can watch and block specific titles you don’t want kids to see.</span>
               </div>
             </li>
           </ul>
+          <p>Ready to watch? Enter your email to create or restart your membership.</p>
+          <input type="text" placeholder="Email address">
+          <button class="btn-3">Get Started ></button>
+        </div>
+        <div id="section-7">
+          <div id="Questions">Questions ? Call
+            <a href="tel:000-800-919-1694">000-800-919-1694</a>
+          </div>
+          <div id="wrapper">
+            <ul id="container">
+              <li id="items">
+                <a href="#">FAQ</a>
+                <a href="#">Help Centre</a>
+                <a href="#">Account</a>
+                <a href="#">Media Centre</a>
+              </li>
+              <li id="items">
+                <a href="#">Investor Relations</a>
+                <a href="#">Jobs</a>
+                <a href="#">Ways to Watch</a>
+                <a href="#">Terms Of Use</a>
+              </li>
+              <li id="items">
+                <a href="#">Pivacy</a>
+                <a href="#">Cookies Preferences</a>
+                <a href="#">Corporate Information</a>
+                <a href="#">Contact Us</a>
+              </li>
+              <li id="items">
+                <a href="#">Speed Test</a>
+                <a href="#">Legal Notices</a>
+                <a href="#">Only on Netfilx</a>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
     </div>
