--- a/task/netflix/index.html
+++ b/task/netflix/index.html
@@ -248,6 +248,11 @@
                 <a href="#">Only on Netfilx</a>
               </li>
             </ul>
+            <select id="languages">
+              <option>English</option>
+              <option>Hindi</option>
+            </select>
+            <p>Netflix India</p>
           </div>
         </div>
       </div>
