--- a/task/netflix/index.html
+++ b/task/netflix/index.html
@@ -14,10 +14,13 @@
           <img src="./Img/logo.png">
         </div>
         <div class="col-20">
-          <select id="languages">
-            <option>English</option>
-            <option>Hindi</option>
-          </select>
+          <div id="header-lang-btn" class="language-button">
+            <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" class="default-ltr-cache-4z3qvp e1svuwfo1" data-name="Languages" aria-hidden="true"><path fill-rule="evenodd" clip-rule="evenodd" d="M10.7668 5.33333L10.5038 5.99715L9.33974 8.9355L8.76866 10.377L7.33333 14H9.10751L9.83505 12.0326H13.4217L14.162 14H16L12.5665 5.33333H10.8278H10.7668ZM10.6186 9.93479L10.3839 10.5632H11.1036H12.8856L11.6348 7.2136L10.6186 9.93479ZM9.52722 4.84224C9.55393 4.77481 9.58574 4.71045 9.62211 4.64954H6.41909V2H4.926V4.64954H0.540802V5.99715H4.31466C3.35062 7.79015 1.75173 9.51463 0 10.4283C0.329184 10.7138 0.811203 11.2391 1.04633 11.5931C2.55118 10.6795 3.90318 9.22912 4.926 7.57316V12.6667H6.41909V7.51606C6.81951 8.15256 7.26748 8.76169 7.7521 9.32292L8.31996 7.88955C7.80191 7.29052 7.34631 6.64699 6.9834 5.99715H9.06968L9.52722 4.84224Z" fill="currentColor"></path></svg>
+            <select class="languages-btn-text">
+              <option>English</option>
+              <option>Hindi</option>
+            </select>
+          </div>
           <button class="btn-1">Sign In</button>
         </div>
       </div>
@@ -137,123 +140,132 @@
           </div>
         </div>
         <div id="section-6">
-          <h1>Frequently Asked Questions</h1>
-          <ul>
-            <li>
-              <button class="collapsible">
-                <h3>
-                  <span>What is Netflix?</span>
-                </h3>
-              </button>
-              <div class="answer">
-                <span>Netflix is a streaming service that offers a wide variety of award-winning TV shows,
-                  movies, anime, documentaries and more – on thousands of internet-connected
-                  devices.
-                  <br>
-                  <br>
-                  You can watch as much as you want, whenever you want, without a single ad – all for
-                  one low monthly price. There's always something new to discover, and new TV shows
-                  and movies are added every week!
-                </span>
-              </div>
-            </li>
-            <li>
-              <button class="collapsible">
-                <h3>
-                  <span>How  much does Netflix cost?</span>
-                </h3>
-              </button>
-              <div class="answer">
-                <span>
-                  Watch Netflix on your smartphone, tablet, Smart TV, laptop, or streaming device, all for one fixed monthly fee. Plans range from ₹ 149 to ₹ 649 a month. No extra costs,
-                  no contracts.
-                </span>
-              </div>
-            </li>
-            <li>
-              <button class="collapsible">
-                <h3>
-                  <span>Where can I watch?</span>
-                </h3>
-              </button>
-              <div class="answer">
-                <span>Watch anywhere, anytime. Sign in with your Netflix account to watch instantly on the web at netflix.com from your personal computer or on any internet-connected device that offers the Netflix app, including smart TVs, smartphones, tablets, streaming media players and game consoles.
-                </span>
-              </div>
-            </li>
-            <li>
-              <button class="collapsible">
-                <h3>
-                  <span>How do I cancel?</span>
-                </h3>
-              </button>
-              <div class="answer">
-                <span>Netflix is flexible. There are no annoying contracts and no commitments. You can easily cancel your account online in two clicks. There are no cancellation fees – start or stop your account anytime.</span>
-              </div>
-            </li>
-            <li>
-              <button class="collapsible">
-                <h3>
-                  <span>What can I watch on Netfliex?</span>
-                </h3>
-              </button>
-              <div class="answer">
-                <span>Netflix has an extensive library of feature films, documentaries, TV shows, anime, award-winning Netflix originals, and more. Watch as much as you want, anytime you want.</span>
-              </div>
-            </li>
-            <li>
-              <button class="collapsible">
-                <h3>
-                  <span>What can I watch on Netflix good for kids?</span>
-                </h3>
-              </button>
-              <div class="answer">
-                <span>The Netflix Kids experience is included in your membership to give parents control while kids enjoy family-friendly TV shows and films in their own space.
-                  <br><br>
-                  Kids profiles come with PIN-protected parental controls that let you restrict the maturity rating of content kids can watch and block specific titles you don’t want kids to see.</span>
-              </div>
-            </li>
-          </ul>
+          <div class="faq-container">
+            <h1>Frequently Asked Questions</h1>
+          </div>
+          <div class="faq-container">
+            <ul>
+              <li>
+                <button class="collapsible">
+                  <h3>
+                    <span>What is Netflix?</span>
+                  </h3>
+                </button>
+                <div class="answer">
+                  <span>Netflix is a streaming service that offers a wide variety of award-winning TV shows,
+                    movies, anime, documentaries and more – on thousands of internet-connected
+                    devices.
+                    <br>
+                    <br>
+                    You can watch as much as you want, whenever you want, without a single ad – all for
+                    one low monthly price. There's always something new to discover, and new TV shows
+                    and movies are added every week!
+                  </span>
+                </div>
+              </li>
+              <li>
+                <button class="collapsible">
+                  <h3>
+                    <span>How  much does Netflix cost?</span>
+                  </h3>
+                </button>
+                <div class="answer">
+                  <span>
+                    Watch Netflix on your smartphone, tablet, Smart TV, laptop, or streaming device, all for one fixed monthly fee. Plans range from ₹ 149 to ₹ 649 a month. No extra costs,
+                    no contracts.
+                  </span>
+                </div>
+              </li>
+              <li>
+                <button class="collapsible">
+                  <h3>
+                    <span>Where can I watch?</span>
+                  </h3>
+                </button>
+                <div class="answer">
+                  <span>Watch anywhere, anytime. Sign in with your Netflix account to watch instantly on the web at netflix.com from your personal computer or on any internet-connected device that offers the Netflix app, including smart TVs, smartphones, tablets, streaming media players and game consoles.
+                  </span>
+                </div>
+              </li>
+              <li>
+                <button class="collapsible">
+                  <h3>
+                    <span>How do I cancel?</span>
+                  </h3>
+                </button>
+                <div class="answer">
+                  <span>Netflix is flexible. There are no annoying contracts and no commitments. You can easily cancel your account online in two clicks. There are no cancellation fees – start or stop your account anytime.</span>
+                </div>
+              </li>
+              <li>
+                <button class="collapsible">
+                  <h3>
+                    <span>What can I watch on Netfliex?</span>
+                  </h3>
+                </button>
+                <div class="answer">
+                  <span>Netflix has an extensive library of feature films, documentaries, TV shows, anime, award-winning Netflix originals, and more. Watch as much as you want, anytime you want.</span>
+                </div>
+              </li>
+              <li>
+                <button class="collapsible">
+                  <h3>
+                    <span>What can I watch on Netflix good for kids?</span>
+                  </h3>
+                </button>
+                <div class="answer">
+                  <span>The Netflix Kids experience is included in your membership to give parents control while kids enjoy family-friendly TV shows and films in their own space.
+                    <br><br>
+                    Kids profiles come with PIN-protected parental controls that let you restrict the maturity rating of content kids can watch and block specific titles you don’t want kids to see.</span>
+                </div>
+              </li>
+            </ul>
+          </div>
           <p>Ready to watch? Enter your email to create or restart your membership.</p>
           <input type="text" placeholder="Email address">
           <button class="btn-3">Get Started ></button>
         </div>
         <div id="section-7">
-          <div id="Questions">Questions ? Call
-            <a href="tel:000-800-919-1694">000-800-919-1694</a>
-          </div>
           <div id="wrapper">
-            <ul id="container">
-              <li id="items">
-                <a href="#">FAQ</a>
-                <a href="#">Help Centre</a>
-                <a href="#">Account</a>
-                <a href="#">Media Centre</a>
-              </li>
-              <li id="items">
-                <a href="#">Investor Relations</a>
-                <a href="#">Jobs</a>
-                <a href="#">Ways to Watch</a>
-                <a href="#">Terms Of Use</a>
-              </li>
-              <li id="items">
-                <a href="#">Pivacy</a>
-                <a href="#">Cookies Preferences</a>
-                <a href="#">Corporate Information</a>
-                <a href="#">Contact Us</a>
-              </li>
-              <li id="items">
-                <a href="#">Speed Test</a>
-                <a href="#">Legal Notices</a>
-                <a href="#">Only on Netfilx</a>
-              </li>
-            </ul>
-            <select id="languages">
+            <div id="Questions">Questions ? Call
+              <a href="tel:000-800-919-1694">000-800-919-1694</a>
+            </div>
+            <div id="link-list-container">
+              <ul id="link-list">
+                <li class="items">
+                  <a href="#">FAQ</a>
+                  <a href="#">Investor Relations</a>
+                  <a href="#">Pivacy</a>
+                  <a href="#">Speed Test</a>
+                </li>
+                <li class="items">
+                  <a href="#">Help Centre</a>
+                  <a href="#">Jobs</a>
+                  <a href="#">Cookies Preferences</a>
+                  <a href="#">Legal Notices</a>
+                </li>
+                <li class="items">
+                  <a href="#">Account</a>
+                  <a href="#">Ways to Watch</a>
+                  <a href="#">Corporate Information</a>
+                  <a href="#">Only on Netfilx</a>
+                </li>
+                <li class="items">
+                  <a href="#">Media Centre</a>
+                  <a href="#">Terms Of Use</a>
+                  <a href="#">Contact Us</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div id="footer-lang-btn" class="language-button">
+            <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" class="default-ltr-cache-4z3qvp e1svuwfo1" data-name="Languages" aria-hidden="true"><path fill-rule="evenodd" clip-rule="evenodd" d="M10.7668 5.33333L10.5038 5.99715L9.33974 8.9355L8.76866 10.377L7.33333 14H9.10751L9.83505 12.0326H13.4217L14.162 14H16L12.5665 5.33333H10.8278H10.7668ZM10.6186 9.93479L10.3839 10.5632H11.1036H12.8856L11.6348 7.2136L10.6186 9.93479ZM9.52722 4.84224C9.55393 4.77481 9.58574 4.71045 9.62211 4.64954H6.41909V2H4.926V4.64954H0.540802V5.99715H4.31466C3.35062 7.79015 1.75173 9.51463 0 10.4283C0.329184 10.7138 0.811203 11.2391 1.04633 11.5931C2.55118 10.6795 3.90318 9.22912 4.926 7.57316V12.6667H6.41909V7.51606C6.81951 8.15256 7.26748 8.76169 7.7521 9.32292L8.31996 7.88955C7.80191 7.29052 7.34631 6.64699 6.9834 5.99715H9.06968L9.52722 4.84224Z" fill="currentColor"></path></svg>
+            <select class="languages-btn-text">
               <option>English</option>
               <option>Hindi</option>
             </select>
-            <p>Netflix India</p>
           </div>
+          <p>Netflix India</p>
         </div>
       </div>
     </div>
