--- a/task/amazon/index.html
+++ b/task/amazon/index.html
@@ -47,6 +47,8 @@
           <option>Hindi</option>
           <option>Gujarati</option>
         </select>
+      </div>
+      <div class="account">
         <div id="sign-in">
           <span>Hello sign in</span>
           <div>
@@ -66,73 +68,89 @@
     </div>
     <div class="nav-header">
       <a href="#"><i class="fa-solid fa-bars"></i>&nbsp;&nbsp;All</a>
-      <a href="https://www.amazon.in/minitv?ref_=nav_avod_desktop_topnav">Amazon miniTV</a>
-      <a href="https://www.amazon.in/b/32702023031?node=32702023031&ld=AZINSOANavDesktop_T3&ref_=nav_cs_sell_T3">Sell</a>
-      <a href="https://www.amazon.in/gp/bestsellers/?ref_=nav_cs_bestsellers">Best Sellers</a>
-      <a href="https://www.amazon.in/events/greatindianfestival?ref_=nav_cs_gb">Today's Deals</a>
-      <a href="https://www.amazon.in/mobile-phones/b/?ie=UTF8&node=1389401031&ref_=nav_cs_mobiles">Moblies</a>
-      <a href="https://www.amazon.in/gp/help/customer/display.html?nodeId=200507590&ref_=nav_cs_help">Customer Serives</a>
-      <a href="https://www.amazon.in/electronics/b/?ie=UTF8&node=976419031&ref_=nav_cs_electronics">Electronies</a>
-      <a href="https://www.amazon.in/gp/new-releases/?ref_=nav_cs_newreleases">New Releases</a>
+      <a href="#">Amazon miniTV</a>
+      <a href="#">Sell</a>
+      <a href="#">Best Sellers</a>
+      <a href="#">Today's Deals</a>
+      <a href="#">Moblies</a>
+      <a href="#">Customer Serives</a>
+      <a href="#">Electronies</a>
+      <a href="#">New Releases</a>
       <a aria-label="Big Savings, More Happiness" href="/events/greatindianfestival/&amp;ref_=ine_gw_j23_p3_swm/?_encoding=UTF8&amp;ref_=nav_swm_swm_gd&amp;pf_rd_p=fc929ac2-7705-40f9-b112-39c90fe9f3f0&amp;pf_rd_s=nav-sitewide-msg&amp;pf_rd_t=4201&amp;pf_rd_i=navbar-4201&amp;pf_rd_m=A21TJRUUN4KGV&amp;pf_rd_r=KCQS90T4836K40ZDQ43N" class="nav-imageHref" tabindex="0">
         <img alt="Big Savings, More Happiness" src="https://m.media-amazon.com/images/G/31/Events/img23/Jupiter23/Homepage/Phase3/P3_SWM_400x39._CB575169081_.jpg">
       </a>
     </div>
-  <div id="section-1">
-    <div id="card-1">
-        <span><strong>Up to 70% off | Deals on</strong></span>
-        <span><strong>Amazon Brands & more</strong></span>
-        <div id="card-1-1">
-          <div id="card-1-1-1">
-            <img src="./img/card-1-img-1.jpg">
-            <span>Starting ₹99 | Home</span>
-            <span>decor</span>
+    <div id="section-1">
+      <div id="card-1">
+          <span><strong>Up to 70% off | Deals on</strong></span>
+          <span><strong>Amazon Brands & more</strong></span>
+          <div id="card-1-1">
+            <div id="card-1-1-1">
+              <img src="./img/card-1-img-1.jpg">
+              <span>Starting ₹99 | Home</span>
+              <span>decor</span>
+            </div>
+            <div id="card-1-1-2">
+              <img src="./img/card-1-img-2.jpg">
+              <span>Starting ₹139 | </span>
+              <span>Kitchen products</span>
+            </div>
           </div>
-          <div id="card-1-1-2">
-            <img src="./img/card-1-img-2.jpg">
-            <span>Starting ₹139 | </span>
-            <span>Kitchen products</span>
+          <div id="card-1-2">
+            <div id="card-1-2-1">
+              <img src="./img/card-1-img-3.jpg">
+              <span>Starting ₹99 | Home</span>
+              <span>decor</span>
+            </div>
+            <div id="card-1-2-2">
+              <img src="./img/card-1-img-4.jpg">
+              <span>Starting ₹139 | </span>
+              <span>Kitchen products</span>
+            </div>
           </div>
+          <a href="https://www.amazon.in/b/?_encoding=UTF8&ie=UTF8&node=12414705031&pd_rd_w=lFmkF&content-id=amzn1.sym.0dc29ce2-b0c1-4dfa-9cec-3345c5bf3a54&pf_rd_p=0dc29ce2-b0c1-4dfa-9cec-3345c5bf3a54&pf_rd_r=GRMP42T43NQ67TAT127Z&pd_rd_wg=Xf2NH&pd_rd_r=ef9909a3-06b2-458e-b184-3b61044d6027&ref_=pd_gw_unk">See all offers</a>
         </div>
-        <div id="card-1-2">
-          <div id="card-1-2-1">
-            <img src="./img/card-1-img-3.jpg">
-            <span>Starting ₹99 | Home</span>
-            <span>decor</span>
-          </div>
-          <div id="card-1-2-2">
-            <img src="./img/card-1-img-4.jpg">
-            <span>Starting ₹139 | </span>
-            <span>Kitchen products</span>
-          </div>
-        </div>
-        <a href="https://www.amazon.in/b/?_encoding=UTF8&ie=UTF8&node=12414705031&pd_rd_w=lFmkF&content-id=amzn1.sym.0dc29ce2-b0c1-4dfa-9cec-3345c5bf3a54&pf_rd_p=0dc29ce2-b0c1-4dfa-9cec-3345c5bf3a54&pf_rd_r=GRMP42T43NQ67TAT127Z&pd_rd_wg=Xf2NH&pd_rd_r=ef9909a3-06b2-458e-b184-3b61044d6027&ref_=pd_gw_unk">See all offers</a>
-      </div>
       <div id="card-2">
-        <span><strong>Starting ₹199 | Shoes &</strong></span>
-        <span><strong>handbags</strong></span>
-        <div id="card-2-1">
-          <div id="card-2-1-1">
-            <img src="./img/card-2-img-1.jpg">
-            <span>Sports shoes</span>
+          <span><strong>Starting ₹199 | Shoes &</strong></span>
+          <span><strong>handbags</strong></span>
+          <div id="card-2-1">
+            <div id="card-2-1-1">
+              <img src="./img/card-2-img-1.jpg">
+              <span>Sports shoes</span>
+            </div>
+            <div id="card-2-1-2">
+              <img src="./img/card-2-img-2.jpg">
+              <span>Men's shoes</span>
+            </div>
           </div>
-          <div id="card-2-1-2">
-            <img src="./img/card-2-img-2.jpg">
-            <span>Men's shoes</span>
+          <div id="card-2-2">
+            <div id="card-2-2-1">
+              <img src="./img/card-2-img-3.jpg">
+              <span>Women's shoes</span>
+            </div>
+            <div id="card-2-2-2">
+              <img src="./img/card-2-img-4.jpg">
+              <span>Handbags</span>
+            </div>
+          </div>
+          <a href="https://www.amazon.in/b/?_encoding=UTF8&ie=UTF8&node=12414705031&pd_rd_w=lFmkF&content-id=amzn1.sym.0dc29ce2-b0c1-4dfa-9cec-3345c5bf3a54&pf_rd_p=0dc29ce2-b0c1-4dfa-9cec-3345c5bf3a54&pf_rd_r=GRMP42T43NQ67TAT127Z&pd_rd_wg=Xf2NH&pd_rd_r=ef9909a3-06b2-458e-b184-3b61044d6027&ref_=pd_gw_unk">See all offers</a>
+        </div>
+      <div id="card-3">
+          <span><strong>Starting ₹349 | Festive</strong></span>
+          <span><strong>deals on headphones</strong></span>
+          <img src="./img/card-3-img-1.jpg">
+          <a href="#">See all offers</a>
+        </div>
+        <div id="card-4">
+          <div id="card-4-1">
+            <span><strong>Sign in for your best</strong></span>
+            <span><strong>experience</strong></span>
+            <button class="btn-2">Sign in securety</button>
+          </div>
+          <div id="card-4-2">
+            <img src="./img/card-4-2-img-1.jpg">
           </div>
         </div>
-        <div id="card-2-2">
-          <div id="card-2-2-1">
-            <img src="./img/card-2-img-3.jpg">
-            <span>Women's shoes</span>
-          </div>
-          <div id="card-2-2-2">
-            <img src="./img/card-2-img-4.jpg">
-            <span>Handbags</span>
-          </div>
-        </div>
-        <a href="https://www.amazon.in/b/?_encoding=UTF8&ie=UTF8&node=12414705031&pd_rd_w=lFmkF&content-id=amzn1.sym.0dc29ce2-b0c1-4dfa-9cec-3345c5bf3a54&pf_rd_p=0dc29ce2-b0c1-4dfa-9cec-3345c5bf3a54&pf_rd_r=GRMP42T43NQ67TAT127Z&pd_rd_wg=Xf2NH&pd_rd_r=ef9909a3-06b2-458e-b184-3b61044d6027&ref_=pd_gw_unk">See all offers</a>
-      </div>
     </div>
   </body>
 </html>
