--- a/task/amazon/index.html
+++ b/task/amazon/index.html
@@ -108,7 +108,7 @@
               <span>Kitchen products</span>
             </div>
           </div>
-          <a href="https://www.amazon.in/b/?_encoding=UTF8&ie=UTF8&node=12414705031&pd_rd_w=lFmkF&content-id=amzn1.sym.0dc29ce2-b0c1-4dfa-9cec-3345c5bf3a54&pf_rd_p=0dc29ce2-b0c1-4dfa-9cec-3345c5bf3a54&pf_rd_r=GRMP42T43NQ67TAT127Z&pd_rd_wg=Xf2NH&pd_rd_r=ef9909a3-06b2-458e-b184-3b61044d6027&ref_=pd_gw_unk">See all offers</a>
+          <a href="#">See all offers</a>
         </div>
       <div id="card-2">
           <span><strong>Starting ₹199 | Shoes &</strong></span>
@@ -133,7 +133,7 @@
               <span>Handbags</span>
             </div>
           </div>
-          <a href="https://www.amazon.in/b/?_encoding=UTF8&ie=UTF8&node=12414705031&pd_rd_w=lFmkF&content-id=amzn1.sym.0dc29ce2-b0c1-4dfa-9cec-3345c5bf3a54&pf_rd_p=0dc29ce2-b0c1-4dfa-9cec-3345c5bf3a54&pf_rd_r=GRMP42T43NQ67TAT127Z&pd_rd_wg=Xf2NH&pd_rd_r=ef9909a3-06b2-458e-b184-3b61044d6027&ref_=pd_gw_unk">See all offers</a>
+          <a href="#">See all offers</a>
         </div>
       <div id="card-3">
           <span><strong>Starting ₹349 | Festive</strong></span>
@@ -151,6 +151,84 @@
             <img src="./img/card-4-2-img-1.jpg">
           </div>
         </div>
+    </div>
+    <div id="section-2">
+      <div id="card-5">
+        <span><strong>Deals on smartphones</strong></span>
+        <span><strong>that suits your budget</strong></span>
+        <div id="card-5-1">
+          <div id="card-5-1-1">
+            <img src="./img/card-5-img-1.jpg">
+            <span>Budget | Under</span>
+            <span>₹10,000</span>
+          </div>
+          <div id="card-5-1-2">
+            <img src="./img/card-5-img-2.jpg">
+            <span>Mid range | ₹10,000-</span>
+            <span>₹25,000</span>
+          </div>
+        </div>
+        <div id="card-5-2">
+          <div id="card-5-2-1">
+            <img src="./img/card-5-img-3.jpg">
+          <span>Premium | ₹25,000 -</span>
+          <span>₹40,000</span>
+          </div>
+          <div id="card-5-2-2">
+            <img src="./img/card-5-img-4.jpg">
+            <span>Ultra premium |</span>
+            <span>Above ₹40,000</span>
+          </div>
+        </div>
+        <a href="#">See all offers</a>
+      </div>
+      <div id="card-6">
+        <span><strong>Minimum 50% off |</strong></span>
+        <span><strong>Restyle your home</strong></span>
+        <div id="card-6-1">
+          <div id="card-6-1-1">
+            <img src="./img/card-6-img-1.jpg">
+            <span>Curtians</span>
+          </div>
+          <div id="card-6-1-2">
+            <img src="./img/card-6-img-2.jpg">
+            <span>Floor lamps</span>
+          </div>
+        </div>
+        <div id="card-6-2">
+          <div id="card-6-2-1">
+            <img src="./img/card-6-img-3.jpg">
+            <span>Under bed storage</span>
+          </div>
+          <div id="card-6-2-2"> 
+            <img src="./img/card-6-img-4.jpg">
+            <span>Showpieses and idols</span>
+          </div>
+        </div>
+        <a href="#">See all offeres</a>
+      </div>
+      <div id="card-7">
+        <span><strong>Children's books, toys</strong></span>
+        <span><strong>and more | Starting ₹79</strong></span>
+        <div id="card-7-1">
+          <div id="card-7-1-1">
+            <img src="./img/card-7-img-1.jpg">
+          <span>Childrens book |</span>
+          <span>Starting ₹99</span>
+          </div>
+          <div id="card-7-1-2">
+            <img src="./img/card-7-img-2.jpg">
+            <span>Toys | Starting ₹99</span>
+          </div>
+        </div>
+        <div id="card-7-2">
+          <div id="card-7-2-1">
+            <img src="./img/card-7-img-3.jpg">
+            <span>Indoor lighting |</span>
+            <span>Starting ₹79</span>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
