--- a/task/amazon/index.html
+++ b/task/amazon/index.html
@@ -205,7 +205,7 @@
             <span>Showpieses and idols</span>
           </div>
         </div>
-        <a href="#">See all offeres</a>
+        <a href="#">See all offers</a>
       </div>
       <div id="card-7">
         <span><strong>Children's books, toys</strong></span>
@@ -227,8 +227,24 @@
             <span>Indoor lighting |</span>
             <span>Starting ₹79</span>
           </div>
+          <div id="card-7-2-2">
+            <img src="./img/card-7-img-4.jpg">
+            <span>kids fashion |</span>
+            <span>Starting ₹119</span>
+          </div>
         </div>
+        <a href="#">See all offers</a>
       </div>
+      <div id="card-8">
+        <span><strong>Up to 80% off | Laptops,</strong></span>
+        <span><strong>smartwatches &. . .</strong></span>
+        <img src="./img/card-8-img-1.jpg">
+        <a href="#">See all offers</a>
+      </div>
+    </div>
+    <div id="section-3">
+      <span><strong>Trending deals</strong></span>
+      <a href="#">See all offers</a>
     </div>
   </body>
 </html>
