--- a/task/amazon/index.html
+++ b/task/amazon/index.html
@@ -245,6 +245,16 @@
     <div id="section-3">
       <span><strong>Trending deals</strong></span>
       <a href="#">See all offers</a>
+      <div id="box-1">
+        <img src="./img/section-3-img-1.jpg">
+        <div id="box-1-1">Up to 20% off</div>
+        <div id="box-1-2">Deal of the Day</div>
+        <div id="box-1-3">itel P55 5G , Ulrafast Gaming & 5G Speed with Dimensity 6080</div>
+      </div>
+      <div id="box-2"></div>
+      <div id="box-3"></div>
+      <div id="box-4"></div>
+      <div id="box-5"></div>
     </div>
   </body>
 </html>
