--- a/task/amazon/index.html
+++ b/task/amazon/index.html
@@ -251,9 +251,7 @@
         <div id="card-9-2">Deal of the Day</div>
         <div id="card-9-3">itel P55 5G , Ulrafast Gaming & 5G Speed with Dimensity 6080</div>
       </div>
-      <div id="card-10">
-        
-      </div>
+      <div id="card-10"></div>
     </div>
   </body>
 </html>
