--- a/task/amazon/index.html
+++ b/task/amazon/index.html
@@ -23,7 +23,7 @@
         <div id="deliver-text">
           <span>Deliver to Ahmedabad 380001</span>
           <span>Update location</span>
-        </div> 
+        </div>
       </div>
       <div class="search">
         <select class="btn">
@@ -76,81 +76,89 @@
       <a href="#">Customer Serives</a>
       <a href="#">Electronies</a>
       <a href="#">New Releases</a>
-      <a aria-label="Big Savings, More Happiness" href="/events/greatindianfestival/&amp;ref_=ine_gw_j23_p3_swm/?_encoding=UTF8&amp;ref_=nav_swm_swm_gd&amp;pf_rd_p=fc929ac2-7705-40f9-b112-39c90fe9f3f0&amp;pf_rd_s=nav-sitewide-msg&amp;pf_rd_t=4201&amp;pf_rd_i=navbar-4201&amp;pf_rd_m=A21TJRUUN4KGV&amp;pf_rd_r=KCQS90T4836K40ZDQ43N" class="nav-imageHref" tabindex="0">
-        <img alt="Big Savings, More Happiness" src="https://m.media-amazon.com/images/G/31/Events/img23/Jupiter23/Homepage/Phase3/P3_SWM_400x39._CB575169081_.jpg">
+      <a
+        aria-label="Big Savings, More Happiness"
+        href="/events/greatindianfestival/&amp;ref_=ine_gw_j23_p3_swm/?_encoding=UTF8&amp;ref_=nav_swm_swm_gd&amp;pf_rd_p=fc929ac2-7705-40f9-b112-39c90fe9f3f0&amp;pf_rd_s=nav-sitewide-msg&amp;pf_rd_t=4201&amp;pf_rd_i=navbar-4201&amp;pf_rd_m=A21TJRUUN4KGV&amp;pf_rd_r=KCQS90T4836K40ZDQ43N"
+        class="nav-imageHref"
+        tabindex="0"
+      >
+        <img
+          alt="Big Savings, More Happiness"
+          src="https://m.media-amazon.com/images/G/31/Events/img23/Jupiter23/Homepage/Phase3/P3_SWM_400x39._CB575169081_.jpg"
+        />
       </a>
     </div>
     <div id="section-1">
       <div id="card-1">
-          <span><strong>Up to 70% off | Deals on</strong></span>
-          <span><strong>Amazon Brands & more</strong></span>
-          <div id="card-1-1">
-            <div id="card-1-1-1">
-              <img src="./img/card-1-img-1.jpg">
-              <span>Starting ₹99 | Home</span>
-              <span>decor</span>
-            </div>
-            <div id="card-1-1-2">
-              <img src="./img/card-1-img-2.jpg">
-              <span>Starting ₹139 | </span>
-              <span>Kitchen products</span>
-            </div>
+        <span><strong>Up to 70% off | Deals on</strong></span>
+        <span><strong>Amazon Brands & more</strong></span>
+        <div id="card-1-1">
+          <div id="card-1-1-1">
+            <img src="./img/card-1-img-1.jpg" />
+            <span>Starting ₹99 | Home</span>
+            <span>decor</span>
           </div>
-          <div id="card-1-2">
-            <div id="card-1-2-1">
-              <img src="./img/card-1-img-3.jpg">
-              <span>Starting ₹99 | Home</span>
-              <span>decor</span>
-            </div>
-            <div id="card-1-2-2">
-              <img src="./img/card-1-img-4.jpg">
-              <span>Starting ₹139 | </span>
-              <span>Kitchen products</span>
-            </div>
+          <div id="card-1-1-2">
+            <img src="./img/card-1-img-2.jpg" />
+            <span>Starting ₹139 | </span>
+            <span>Kitchen products</span>
           </div>
-          <a href="#">See all offers</a>
         </div>
+        <div id="card-1-2">
+          <div id="card-1-2-1">
+            <img src="./img/card-1-img-3.jpg" />
+            <span>Starting ₹99 | Home</span>
+            <span>decor</span>
+          </div>
+          <div id="card-1-2-2">
+            <img src="./img/card-1-img-4.jpg" />
+            <span>Starting ₹139 | </span>
+            <span>Kitchen products</span>
+          </div>
+        </div>
+        <a href="#">See all offers</a>
+      </div>
       <div id="card-2">
-          <span><strong>Starting ₹199 | Shoes &</strong></span>
-          <span><strong>handbags</strong></span>
-          <div id="card-2-1">
-            <div id="card-2-1-1">
-              <img src="./img/card-2-img-1.jpg">
-              <span>Sports shoes</span>
-            </div>
-            <div id="card-2-1-2">
-              <img src="./img/card-2-img-2.jpg">
-              <span>Men's shoes</span>
-            </div>
+        <span><strong>Starting ₹199 | Shoes &</strong></span>
+        <span><strong>handbags</strong></span>
+        <div id="card-2-1">
+          <div id="card-2-1-1">
+            <img src="./img/card-2-img-1.jpg" />
+            <span>Sports shoes</span>
           </div>
-          <div id="card-2-2">
-            <div id="card-2-2-1">
-              <img src="./img/card-2-img-3.jpg">
-              <span>Women's shoes</span>
-            </div>
-            <div id="card-2-2-2">
-              <img src="./img/card-2-img-4.jpg">
-              <span>Handbags</span>
-            </div>
+          <div id="card-2-1-2">
+            <img src="./img/card-2-img-2.jpg" />
+            <span>Men's shoes</span>
           </div>
-          <a href="#">See all offers</a>
         </div>
+        <div id="card-2-2">
+          <div id="card-2-2-1">
+            <img src="./img/card-2-img-3.jpg" />
+            <span>Women's shoes</span>
+          </div>
+          <div id="card-2-2-2">
+            <img src="./img/card-2-img-4.jpg" />
+            <span>Handbags</span>
+          </div>
+        </div>
+        <a href="#">See all offers</a>
+      </div>
       <div id="card-3">
-          <span><strong>Starting ₹349 | Festive</strong></span>
-          <span><strong>deals on headphones</strong></span>
-          <img src="./img/card-3-img-1.jpg">
-          <a href="#">See all offers</a>
+        <span><strong>Starting ₹349 | Festive</strong></span>
+        <span><strong>deals on headphones</strong></span>
+        <img src="./img/card-3-img-1.jpg" />
+        <a href="#">See all offers</a>
+      </div>
+      <div id="card-4">
+        <div id="card-4-1">
+          <span><strong>Sign in for your best</strong></span>
+          <span><strong>experience</strong></span>
+          <button class="btn-2">Sign in securety</button>
         </div>
-        <div id="card-4">
-          <div id="card-4-1">
-            <span><strong>Sign in for your best</strong></span>
-            <span><strong>experience</strong></span>
-            <button class="btn-2">Sign in securety</button>
-          </div>
-          <div id="card-4-2">
-            <img src="./img/card-4-2-img-1.jpg">
-          </div>
+        <div id="card-4-2">
+          <img src="./img/card-4-2-img-1.jpg" />
         </div>
+      </div>
     </div>
     <div id="section-2">
       <div id="card-5">
@@ -158,24 +166,24 @@
         <span><strong>that suits your budget</strong></span>
         <div id="card-5-1">
           <div id="card-5-1-1">
-            <img src="./img/card-5-img-1.jpg">
+            <img src="./img/card-5-img-1.jpg" />
             <span>Budget | Under</span>
             <span>₹10,000</span>
           </div>
           <div id="card-5-1-2">
-            <img src="./img/card-5-img-2.jpg">
+            <img src="./img/card-5-img-2.jpg" />
             <span>Mid range | ₹10,000-</span>
             <span>₹25,000</span>
           </div>
         </div>
         <div id="card-5-2">
           <div id="card-5-2-1">
-            <img src="./img/card-5-img-3.jpg">
-          <span>Premium | ₹25,000 -</span>
-          <span>₹40,000</span>
+            <img src="./img/card-5-img-3.jpg" />
+            <span>Premium | ₹25,000 -</span>
+            <span>₹40,000</span>
           </div>
           <div id="card-5-2-2">
-            <img src="./img/card-5-img-4.jpg">
+            <img src="./img/card-5-img-4.jpg" />
             <span>Ultra premium |</span>
             <span>Above ₹40,000</span>
           </div>
@@ -187,21 +195,21 @@
         <span><strong>Restyle your home</strong></span>
         <div id="card-6-1">
           <div id="card-6-1-1">
-            <img src="./img/card-6-img-1.jpg">
+            <img src="./img/card-6-img-1.jpg" />
             <span>Curtians</span>
           </div>
           <div id="card-6-1-2">
-            <img src="./img/card-6-img-2.jpg">
+            <img src="./img/card-6-img-2.jpg" />
             <span>Floor lamps</span>
           </div>
         </div>
         <div id="card-6-2">
           <div id="card-6-2-1">
-            <img src="./img/card-6-img-3.jpg">
+            <img src="./img/card-6-img-3.jpg" />
             <span>Under bed storage</span>
           </div>
-          <div id="card-6-2-2"> 
-            <img src="./img/card-6-img-4.jpg">
+          <div id="card-6-2-2">
+            <img src="./img/card-6-img-4.jpg" />
             <span>Showpieses and idols</span>
           </div>
         </div>
@@ -212,23 +220,23 @@
         <span><strong>and more | Starting ₹79</strong></span>
         <div id="card-7-1">
           <div id="card-7-1-1">
-            <img src="./img/card-7-img-1.jpg">
-          <span>Childrens book |</span>
-          <span>Starting ₹99</span>
+            <img src="./img/card-7-img-1.jpg" />
+            <span>Childrens book |</span>
+            <span>Starting ₹99</span>
           </div>
           <div id="card-7-1-2">
-            <img src="./img/card-7-img-2.jpg">
+            <img src="./img/card-7-img-2.jpg" />
             <span>Toys | Starting ₹99</span>
           </div>
         </div>
         <div id="card-7-2">
           <div id="card-7-2-1">
-            <img src="./img/card-7-img-3.jpg">
+            <img src="./img/card-7-img-3.jpg" />
             <span>Indoor lighting |</span>
             <span>Starting ₹79</span>
           </div>
           <div id="card-7-2-2">
-            <img src="./img/card-7-img-4.jpg">
+            <img src="./img/card-7-img-4.jpg" />
             <span>kids fashion |</span>
             <span>Starting ₹119</span>
           </div>
@@ -238,20 +246,59 @@
       <div id="card-8">
         <span><strong>Up to 80% off | Laptops,</strong></span>
         <span><strong>smartwatches &. . .</strong></span>
-        <img src="./img/card-8-img-1.jpg">
+        <img src="./img/card-8-img-1.jpg" />
         <a href="#">See all offers</a>
       </div>
     </div>
     <div id="section-3">
-      <span><strong>Trending deals</strong></span>
-      <a href="#">See all offers</a>
-      <div id="card-9">
-        <img src="./img/section-3-img-1.jpg">
-        <div id="card-9-1">Up to 20% off</div>
-        <div id="card-9-2">Deal of the Day</div>
-        <div id="card-9-3">itel P55 5G , Ulrafast Gaming & 5G Speed with Dimensity 6080</div>
+      <div class="today-deals">
+        <span class="fnt-20"><strong>Today's deals</strong></span>
+        <a href="#">See all offers</a>
       </div>
-      <div id="card-10"></div>
+      <div class="offer-cards">
+        <div class="offer-card">
+          <div class="offer-card-img">
+            <img src="./img/section-3-img-1.jpg" />
+          </div>
+          <div class="card-caption">
+            <div class="offer-card-deals">
+              <span class="offer-card-txt-1">Up to 20% off</span>
+              <span class="offer-card-txt-2">Deal of the day</span>
+            </div>
+            <div class="offer-card-details">
+              <span class="fnt-15">itel P55 5G , Ulrafast Gaming & 5G Speed with Dimensity 6080</span>
+            </div>
+          </div>
+        </div>
+        <div class="offer-card">
+          <div class="offer-card-img">
+            <img src="./img/section-3-img-1.jpg" />
+          </div>
+          <div class="card-caption">
+            <div class="offer-card-deals">
+              <span class="offer-card-txt-1">Up to 20% off</span>
+              <span class="offer-card-txt-2">Deal of the day</span>
+            </div>
+            <div class="offer-card-details">
+              <span class="fnt-15">itel P55 5G , Ulrafast Gaming & 5G Speed with Dimensity 6080</span>
+            </div>
+          </div>
+        </div>
+        <div class="offer-card">
+          <div class="offer-card-img">
+            <img src="./img/section-3-img-1.jpg" />
+          </div>
+          <div class="card-caption">
+            <div class="offer-card-deals">
+              <span class="offer-card-txt-1">Up to 20% off</span>
+              <span class="offer-card-txt-2">Deal of the day</span>
+            </div>
+            <div class="offer-card-details">
+              <span class="fnt-15">itel P55 5G , Ulrafast Gaming & 5G Speed with Dimensity 6080</span>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
