--- a/task/amazon/index.html
+++ b/task/amazon/index.html
@@ -85,8 +85,7 @@
         <img
           alt="Big Savings, More Happiness"
           src="https://m.media-amazon.com/images/G/31/Events/img23/Jupiter23/Homepage/Phase3/P3_SWM_400x39._CB575169081_.jpg"
-        />
-      </a>
+      /></a>
     </div>
     <div id="section-1">
       <div id="card-1">
@@ -266,38 +265,111 @@
               <span class="offer-card-txt-2">Deal of the day</span>
             </div>
             <div class="offer-card-details">
-              <span class="fnt-15">itel P55 5G , Ulrafast Gaming & 5G Speed with Dimensity 6080</span>
+              <span class="fnt-15"
+                >itel P55 5G , Ulrafast Gaming & 5G Speed with Dimensity
+                6080</span
+              >
             </div>
           </div>
         </div>
         <div class="offer-card">
           <div class="offer-card-img">
-            <img src="./img/section-3-img-1.jpg" />
+            <img src="./img/section-3-img-2.jpg" />
           </div>
           <div class="card-caption">
             <div class="offer-card-deals">
-              <span class="offer-card-txt-1">Up to 20% off</span>
+              <span class="offer-card-txt-1">Up to 27% off</span>
               <span class="offer-card-txt-2">Deal of the day</span>
             </div>
             <div class="offer-card-details">
-              <span class="fnt-15">itel P55 5G , Ulrafast Gaming & 5G Speed with Dimensity 6080</span>
+              <span class="fnt-15">Great Deals on Health and Sports Sup…</span>
             </div>
           </div>
         </div>
         <div class="offer-card">
           <div class="offer-card-img">
-            <img src="./img/section-3-img-1.jpg" />
+            <img src="./img/section-3-img-3.jpg" />
           </div>
           <div class="card-caption">
             <div class="offer-card-deals">
-              <span class="offer-card-txt-1">Up to 20% off</span>
+              <span class="offer-card-txt-1">Up to 87% off</span>
               <span class="offer-card-txt-2">Deal of the day</span>
             </div>
             <div class="offer-card-details">
-              <span class="fnt-15">itel P55 5G , Ulrafast Gaming & 5G Speed with Dimensity 6080</span>
+              <span class="fnt-15">Wallpapers Starting 149 from wolpin</span>
             </div>
           </div>
         </div>
+        <div class="offer-card">
+          <div class="offer-card-img">
+            <img src="./img/section-3-img-4.jpg" />
+          </div>
+          <div class="card-caption">
+            <div class="offer-card-deals">
+              <span class="offer-card-txt-1">Up to 95% off</span>
+              <span class="offer-card-txt-2">Deal of the day</span>
+            </div>
+            <div class="offer-card-details">
+              <span class="fnt-15">Travel Adapters And Electronic Access…</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div id="section-4">
+      <div id="kitchen-offers">
+        <span class="fnt-20"><strong>Kitchen & dining products</strong></span>
+        <a href="#">See all offers</a>
+      </div>
+      <div id="kitchen-img">
+        <img src="./img/section-4-img-1.jpg" />
+        <img src="./img/section-4-img-2.jpg" />
+        <img src="./img/section-4-img-3.jpg" />
+        <img src="./img/section-4-img-4.jpg" />
+      </div>
+    </div>
+    <div id="section-5">
+      <div id="home-decor-offers">
+        <span class="fnt-20"
+          ><strong
+            >Up to 70% off | Home decor &amp; home furnishing from stores near
+            you</strong
+          ></span
+        >
+        <a href="#">See all offers</a>
+      </div>
+      <div id="home-decor-img">
+        <img src="./img/section-5-img-1.jpg" />
+        <img src="./img/section-5-img-2.jpg" />
+        <img src="./img/section-5-img-3.jpg" />
+        <img src="./img/section-5-img-4.jpg" />
+      </div>
+    </div>
+    <div id="section-6">
+      <div id="card-9">
+        <span><strong>Under ₹499 | Pocket-</strong></span>
+        <span><strong>friendly fashion</strong></span>
+        <div id="card-9-1">
+          <div id="card-9-1-1">
+            <img src="./img/card-9-img-1.jpg" />
+            <span>Clothing</span>
+          </div>
+          <div id="card-9-1-2">
+            <img src="./img/card-9-img-2.jpg" />
+            <span>Backpacks</span>
+          </div>
+        </div>
+        <div id="card-9-2">
+          <div id="card-9-2-1">
+            <img src="./img/card-9-img-3.jpg" />
+            <span>Footwear</span>
+          </div>
+          <div id="card-9-2-2">
+            <img src="./img/card-9-img-4.jpg" />
+            <span>View all</span>
+          </div>
+        </div>
+        <a href="#">See all offers</a>
       </div>
     </div>
   </body>
