--- a/task/amazon/index.html
+++ b/task/amazon/index.html
@@ -371,6 +371,22 @@
         </div>
         <a href="#">See all offers</a>
       </div>
+      <div id="card-10">
+        <h3>Keep shopping for</h3>
+        <img src="./img/card-10.jpg">
+        <span>Amazon Basics Flexible Premium HDMI</span>
+        <span>Cable (Black, 4K@60Hz, 18Gbps), 3-Foot</span>
+        <p id="price">₹189<sup>00</sup>,  M.R.P.: <del>₹700.00</del></p>
+        <a href="#">See more</a>
+      </div>
+      <div id="card-11">
+        <span><strong>Bestsellers in Women's</strong></span>
+        <span><strong>Indian Clothing</strong></span>
+        <div id="card-11-1">
+          <img src="./img/card-11-img-1.jpg">
+          <img src="./img/card-11-img-2.jpg">
+        </div>
+      </div>
     </div>
   </body>
 </html>
