--- a/task/amazon/index.html
+++ b/task/amazon/index.html
@@ -330,12 +330,8 @@
     </div>
     <div id="section-5">
       <div id="home-decor-offers">
-        <span class="fnt-20"
-          ><strong
-            >Up to 70% off | Home decor &amp; home furnishing from stores near
-            you</strong
-          ></span
-        >
+        <span class="fnt-20">
+          <strong>Up to 70% off | Home decor &amp; home furnishing from stores near you</strong></span>
         <a href="#">See all offers</a>
       </div>
       <div id="home-decor-img">
@@ -386,6 +382,41 @@
           <img src="./img/card-11-img-1.jpg">
           <img src="./img/card-11-img-2.jpg">
         </div>
+        <div id="card-11-2">
+          <img src="./img/card-11-img-3.jpg">
+          <img src="./img/card-11-img-4.jpg">
+        </div>
+      </div>
+      <div id="card-12">
+        <span><strong>Birthday store</strong></span>
+        <div id="card-12-1">
+          <div id="card-12-1-1">
+            <img src="./img/card-12-img-1.jpg">
+            <span>Gift for men</span>
+          </div>
+          <div id="card-12-1-2">
+            <img src="./img/card-12-img-2.jpg">
+            <span>Gift for women</span>
+          </div>
+        </div>
+        <div id="card-12-2">
+          <div id="card-12-2-1">
+            <img src="./img/card-12-img-3.jpg">
+            <span>Gift for boys</span>
+          </div>
+          <div id="card-12-2-2">
+            <img src="./img/card-12-img-4.jpg">
+            <span>Gift for grils</span>
+          </div>
+        </div>
+        <a href="#">See more</a>
+      </div>
+    </div>
+    <div id="section-7">
+      <div id="womend-led-offer">
+        <span class="fnt-20">
+          <strong>New launches from womed-led businesses</strong></span>
+          <a href="#">See all offers</a>
       </div>
     </div>
   </body>
