--- a/task/amazon/index.html
+++ b/task/amazon/index.html
@@ -418,6 +418,12 @@
           <strong>New launches from womed-led businesses</strong></span>
           <a href="#">See all offers</a>
       </div>
+      <div id="womed-led-img">
+        <img src="./img/section-7-img-1.jpg">
+        <img src="./img/section-7-img-2.jpg">
+        <img src="./img/section-7-img-3.jpg">
+        <img src="./img/section-7-img-4.jpg">
+      </div>
     </div>
   </body>
 </html>
