--- a/task/amazon/index.html
+++ b/task/amazon/index.html
@@ -331,7 +331,11 @@
     <div id="section-5">
       <div id="home-decor-offers">
         <span class="fnt-20">
-          <strong>Up to 70% off | Home decor &amp; home furnishing from stores near you</strong></span>
+          <strong
+            >Up to 70% off | Home decor &amp; home furnishing from stores near
+            you</strong
+          ></span
+        >
         <a href="#">See all offers</a>
       </div>
       <div id="home-decor-img">
@@ -369,43 +373,43 @@
       </div>
       <div id="card-10">
         <h3>Keep shopping for</h3>
-        <img src="./img/card-10.jpg">
+        <img src="./img/card-10.jpg" />
         <span>Amazon Basics Flexible Premium HDMI</span>
         <span>Cable (Black, 4K@60Hz, 18Gbps), 3-Foot</span>
-        <p id="price">₹189<sup>00</sup>,  M.R.P.: <del>₹700.00</del></p>
+        <p id="price">₹189<sup>00</sup>, M.R.P.: <del>₹700.00</del></p>
         <a href="#">See more</a>
       </div>
       <div id="card-11">
         <span><strong>Bestsellers in Women's</strong></span>
         <span><strong>Indian Clothing</strong></span>
         <div id="card-11-1">
-          <img src="./img/card-11-img-1.jpg">
-          <img src="./img/card-11-img-2.jpg">
+          <img src="./img/card-11-img-1.jpg" />
+          <img src="./img/card-11-img-2.jpg" />
         </div>
         <div id="card-11-2">
-          <img src="./img/card-11-img-3.jpg">
-          <img src="./img/card-11-img-4.jpg">
+          <img src="./img/card-11-img-3.jpg" />
+          <img src="./img/card-11-img-4.jpg" />
         </div>
       </div>
       <div id="card-12">
         <span><strong>Birthday store</strong></span>
         <div id="card-12-1">
           <div id="card-12-1-1">
-            <img src="./img/card-12-img-1.jpg">
+            <img src="./img/card-12-img-1.jpg" />
             <span>Gift for men</span>
           </div>
           <div id="card-12-1-2">
-            <img src="./img/card-12-img-2.jpg">
+            <img src="./img/card-12-img-2.jpg" />
             <span>Gift for women</span>
           </div>
         </div>
         <div id="card-12-2">
           <div id="card-12-2-1">
-            <img src="./img/card-12-img-3.jpg">
+            <img src="./img/card-12-img-3.jpg" />
             <span>Gift for boys</span>
           </div>
           <div id="card-12-2-2">
-            <img src="./img/card-12-img-4.jpg">
+            <img src="./img/card-12-img-4.jpg" />
             <span>Gift for grils</span>
           </div>
         </div>
@@ -415,14 +419,43 @@
     <div id="section-7">
       <div id="womend-led-offer">
         <span class="fnt-20">
-          <strong>New launches from womed-led businesses</strong></span>
-          <a href="#">See all offers</a>
+          <strong>New launches from womed-led businesses</strong></span
+        >
+        <a href="#">See all offers</a>
       </div>
       <div id="womed-led-img">
-        <img src="./img/section-7-img-1.jpg">
-        <img src="./img/section-7-img-2.jpg">
-        <img src="./img/section-7-img-3.jpg">
-        <img src="./img/section-7-img-4.jpg">
+        <img src="./img/section-7-img-1.jpg" />
+        <img src="./img/section-7-img-2.jpg" />
+        <img src="./img/section-7-img-3.jpg" />
+        <img src="./img/section-7-img-4.jpg" />
+      </div>
+    </div>
+    <div id="section-8">
+      <div id="grocery-offer">
+        <span class="fnt-20">
+          <strong>Best Sellers in Grocery & Gourmet Foods</strong></span
+        >
+      </div>
+      <div id="grocery-img">
+        <img src="./img/section-8-img-1.jpg" />
+        <img src="./img/section-8-img-2.jpg" />
+        <img src="./img/section-8-img-3.jpg" />
+        <img id="img-4" src="./img/section-8-img-4.jpg" />
+        <img src="./img/section-8-img-5.jpg" />
+        <img src="./img/section-8-img-6.jpg" />
+        <img src="./img/section-8-img-7.jpg" />
+      </div>
+    </div>
+    <div id="section-9">
+      <div id="section-9-1">
+        <img src="./img/section-9.jpg" />
+      </div>
+      <div id="section-9-2">
+        <p>
+          VIBOTON HDMI Splitter, 2x2 HDMI2.0 Switch Splitter,2 in 2 Out HDMI
+          Switcher with SPDIF Audio 3.5mm. . .
+        </p>
+        <span><sup>₹</sup>2,199<sup>00</sup></span>
       </div>
     </div>
   </body>
