--- a/task/amazon/index.html
+++ b/task/amazon/index.html
@@ -458,5 +458,18 @@
         <span><sup>₹</sup>2,199<sup>00</sup></span>
       </div>
     </div>
+    <div id="section-10">
+      <div id="card-13">
+        <span><strong>Essentials for Expecting</strong></span>
+        <span><strong>Mothers</strong></span>
+        <div id="card-13-1">
+          <div id="card-13-1-1">
+            <img src="./img/card-13-img-1.jpg">
+            <span>Pregnancy
+              <br>supplements</span>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
