--- a/task/amazon/index.html
+++ b/task/amazon/index.html
@@ -513,5 +513,30 @@
       <img src="./img/card-15-img-1.jpg">
       <a href="#">Watch more content | only on mini. . .</a>
     </div>
+    <div id="card-16">
+      <span><strong>One stop shop for all</strong></span>
+      <span><strong>your wedding shopping</strong></span>
+      <div id="card-16-1">
+        <div id="card-16-1-1">
+          <img src="./img/card-16-img-1.jpg">
+          <span>Shop for her</span>
+        </div>
+        <div id="card-16-1-2">
+          <img src="./img/card-16-img-2.jpg">
+          <span>Shop for him</span>
+        </div>
+      </div>
+      <div id="card-16-2">
+        <div id="card-16-2-1">
+          <img src="./img/card-16-img-3.jpg">
+          <span>Pooja essentials</span>
+        </div>
+        <div id="card-16-2-2">
+          <img src="./img/card-16-img-4.jpg">
+          <span>Explore the store</span>
+        </div>
+      </div>
+      <a href="#">See more</a>
+    </div>
   </body>
 </html>
